--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,8 @@
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
-        },
-        {
-            "src": "api/index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/api/index.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/$1",
-            "check": true
-        },
-        {
-            "src": "/(.*)",
-            "status": 200,
-            "dest": "/index.html"
+            "source": "/api/(.*)",
+            "destination": "/api"
         }
     ]
 }
